wwr/styles/rafting.css
:root {
  --primary-color: #8dc793;
  --secondary-color: #e2dfa9;
  --accent1-color: #19d92c;
  --accent2-color: #f6eb1c;
  --heading-font: 'Finger Paint', Arial, sans-serif;
  --body-font: Nunito, Arial, sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: 1fr;
  background-color: var(--primary-color);
  color: var(--accent2-color);
  padding: 0.5rem;
}

header img {
  width: 70px;
  grid-column: 2;
  border-radius: 50%;
}

header nav {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  grid-column: 3/8;
}

header nav a {
  text-decoration: none;
  color: #000;
}

body {
  font-family: var(--body-font);
  color: #000;
}

header,
main,
footer {
  width: 840px;
  margin: 0 auto;
}

h1,
h2 {
  font-family: var(--heading-font);
  color: var(--primary-color);
}

nav,
p,
section,
article {
  margin: 16px;
  padding: 8px;
}

footer {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
}

footer p {
  grid-column: 2/5;
}

.socialmedia {
  height: 36px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.socialmedia a {
  text-decoration: none;
}

.socialmedia a img {
  height: 32px;
}

/* ABOUT page CSS */
.hero {
  position: relative;
}

.hero img {
  display: block;
  width: 100%;
  height: auto;
}

.hero h1 {
  position: absolute;
  top: 20px;
  width: 100%;
  padding: 16px;
  text-align: center;
  opacity: 0.7;
  background-color: var(--accent1-color);
  color: #fff;
}

.hero article {
  position: absolute;
  top: 433px;
  width: 96%;
  text-align: center;
  opacity: 0.9;
  background-color: var(--primary-color);
  color: #fff;
}

.hero article img {
  float: right;
  width: 125px;
}

.history {
  text-align: center;
}

.history div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.history img {
  width: 200px;
}

.advanture {
  text-align: center;
}

.advanture h2 {
  margin-bottom: 1rem;
}

.advanture-photos {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: 1fr auto;
  gap: 0.5rem;
}

.advanture-photos img {
  height: 100px;
}

.advanture figcaption {
  order: 1;
}

/* CONTACT page CSS */
.contact-info h1 {
  text-align: center;
}

.contact-info table {
  margin: 1rem auto;
  text-align: center;
}

.contact-info h2 {
  text-align: center;
}

.employee {
  text-align: center;
}

.advanture h2 {
  margin-bottom: 1rem;
}

.employee-photos {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr auto;
  margin-top: 1rem;
}

.employee-photos img {
  height: 200px;
  border-radius: 5%;
}

.employee figcaption {
  order: 1;
}

.message h2 {
  text-align: center;
}

form {
  width: 650px;
  margin: 1rem auto 0;
  padding: 1rem;
  border: 1px solid rgb(0 0 0/ 0.1);
  border-radius: 0.5rem;
  background-color: #eee;
  display: grid;
}

fieldset {
  display: grid;
  grid-gap: 0.5rem;
  margin: 1rem;
  border: 1px solid rgb(0 0 0 / 0.2);
  padding: 1rem;
}

label,
input,
button,
select,
textarea {
  font-family: Roboto, Arial, sans-serif;
}

label {
  text-align: right;
  padding-right: 1rem;
}

input,
select,
textarea {
  padding: 0.5rem;
  font-size: 1.1rem;
}

input[type='checkbox'] {
  width: 22px;
  height: 22px;
  vertical-align: bottom;
}

input[type='radio'] {
  width: 22px;
  height: 22px;
  vertical-align: bottom;
}

.input-container {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  align-items: center;
}

input[type='text'],
input[type='email'] {
  width: 100%;
  grid-column: 2/9;
}

textarea {
  width: 100%;
  resize: none;
}

button {
  margin: 1rem;
  background-color: var(--primary-color);
  color: #000;
  border: none;
  border-radius: 0.5rem;
  padding: 0.75rem;
  font-size: 1.2rem;
  cursor: pointer;
}

button:hover {
  background-color: var(--accent1-color);
}

.radio-container {
  margin: 1rem auto;
}

.text-area-container {
  display: flex;
  align-items: center;
}

.checkbox-container {
  margin-top: 1rem;
}

.wireframe-link {
  text-align: center;
  margin-left: 2rem;
  text-decoration: none;
}

/* HOME page CSS */
.newsletter {
  text-align: center;
}

.newsletter form {
  display: flex;
  margin: 1rem auto;
  padding: 0 1rem;
  width: 100%;
  align-items: center;
  justify-content: space-around;
}

.newsletter form > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.purpose > div {
  display: grid;
  grid-template-columns: 1fr 1fr;
  row-gap: 1rem;
  align-items: start;
}

.purpose img {
  width: 350px;
  border-radius: 10px;
}

.centered {
  justify-self: center;
}

.grid-h-p {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  justify-content: center;
}

.grid-h-p h4 {
  margin-top: 1rem;
}
.grid-h-p p {
  margin: 0;
}

/* TRIPS page CSS */
.book-form-btn {
  all: unset;
  position: absolute;
  top: 120px;
  left: 350px;
}

.book-form-btn button {
  box-shadow: 0 0 10px 3px #000;
}

.book-form-btn2 {
  all: unset;
  display: flex;
  align-items: center;
  justify-content: center;
}

.book-form-btn2 button {
  box-shadow: 0 0 10px 3px var(--secondary-color);
}

.adjust-top-margin {
  margin-top: 170px;
}

.trips-photos {
  position: absolute;
  top: 370px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 100%;
}

.trips-photos img {
  width: 200px;
  border: 3px inset var(--primary-color);
  border-radius: 3px;
  box-shadow: 0 0 20px #272727;
}

.trips-photos figcaption {
  text-align: center;
  margin-top: 6px;
}

.trips-photos figure {
  position: relative;
  cursor: pointer;
}

.tooltip {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 87%;
  background-color: var(--secondary-color);
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  opacity: 0;
  transition: opacity 0.3s ease;
  border: 3px inset var(--primary-color);
  border-radius: 3px;
}

.trips-photos figure:hover .tooltip {
  opacity: 1;
}

.trips-table {
  margin-top: 60px;
}

.trips-table table {
  border-collapse: collapse;
  margin: 0 auto;
}

.trips-table th,
td {
  border: 1px solid #000;
}

.trips-table th:nth-child(1) {
  padding: 0 10px;
}

.trips-table td:nth-child(2) {
  width: 350px;
  padding: 10px;
}

.trips-table td:nth-child(2) {
  width: 350px;
  padding: 10px;
}

.trips-table td:nth-child(3) {
  width: 350px;
  padding: 10px;
}

.trips-table ul {
  margin-left: 25px;
}

